logs/ftw.recipe.translations.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/ftw'...
Listing './lib/python3.5/site-packages/ftw/recipe'...
Listing './lib/python3.5/site-packages/ftw/recipe/translations'...
Compiling './lib/python3.5/site-packages/ftw/recipe/translations/google.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/google.py", line 124
    print 'The clients scretes file for the Google Application' + \
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ftw/recipe/translations/i18nbuild'...
Compiling './lib/python3.5/site-packages/ftw/recipe/translations/i18ntools.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/i18ntools.py", line 37
    print 'Rebuilding', potpath
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ftw/recipe/translations/masstranslate'...
Compiling './lib/python3.5/site-packages/ftw/recipe/translations/masstranslate/upload.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/masstranslate/upload.py", line 35
    print 'Spreadsheet:', spreadsheet_url
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ftw/recipe/translations/progresslogger.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/progresslogger.py", line 23
    print 'Starting %s' % self.message
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ftw/recipe/translations/tests'...
Listing './lib/python3.5/site-packages/ftw/recipe/translations/tests/assets'...
Compiling './lib/python3.5/site-packages/ftw/recipe/translations/tests/test_i18nbuild_integration.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/tests/test_i18nbuild_integration.py", line 103
    print '-' * 30
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ftw/recipe/translations/tests/test_utils.py'...
***   File "./lib/python3.5/site-packages/ftw/recipe/translations/tests/test_utils.py", line 15
    print 'Foo'
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ftw.recipe.translations-1.2.6.egg-info'...
Listing './lib/python3.5/site-packages/i18ndude'...
Compiling './lib/python3.5/site-packages/i18ndude/extract.py'...
***   File "./lib/python3.5/site-packages/i18ndude/extract.py", line 528
    print 'There was an error processing', filename
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/i18ndude/gsextract.py'...
***   File "./lib/python3.5/site-packages/i18ndude/gsextract.py", line 26
    print u"There was an error in parsing %s: %s" % (filename, e)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i18ndude/pygettext.py'...
***   File "./lib/python3.5/site-packages/i18ndude/pygettext.py", line 578
    print _('pygettext.py (xgettext for Python) %s') % __version__
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/i18ndude/script.py'...
***   File "./lib/python3.5/site-packages/i18ndude/script.py", line 456
    print '%s: %s added, %s removed' % (po.filename,
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/i18ndude/tests'...
Listing './lib/python3.5/site-packages/i18ndude/tests/input'...
Listing './lib/python3.5/site-packages/i18ndude/tests/output'...
Compiling './lib/python3.5/site-packages/i18ndude/utils.py'...
***   File "./lib/python3.5/site-packages/i18ndude/utils.py", line 245
    print "Wrote command line documentation to", target
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/i18ndude/visualisation.py'...
***   File "./lib/python3.5/site-packages/i18ndude/visualisation.py", line 108
    print template
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/i18ndude/zcmlextract.py'...
***   File "./lib/python3.5/site-packages/i18ndude/zcmlextract.py", line 55
    print u"There was an error in parsing %s: %s" % (filename, e)
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/i18ndude-4.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/path.py-10.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/tal'...
Listing './lib/python3.5/site-packages/zope/tal/benchmark'...
Listing './lib/python3.5/site-packages/zope/tal/tests'...
Listing './lib/python3.5/site-packages/zope/tal/tests/input'...
Listing './lib/python3.5/site-packages/zope/tal/tests/output'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.tal-4.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
